--- a/.github/workflows/autodeployment.yaml
+++ b/.github/workflows/autodeployment.yaml
@@ -12,8 +12,10 @@ env:
     CONTAINER_NAME_WEBAPI: aksperflab-webapi
     CONTAINER_NAME_WEBAPP: aksperflab-webapp
     DEPLOYMENT_MANIFEST_PATH: |
-        manifests/deployment.yaml
-        manifests/service.yaml
+        manifests/webapp-deployment.yaml
+        manifests/webapi-deployment.yaml
+        manifests/webapi-service.yaml
+        manifests/webapp-service.yaml
 jobs:
     buildImage:
         permissions:
@@ -63,6 +65,6 @@ jobs:
               name: Deploys application
               with:
                 action: deploy
-                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
+                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME_WEBAPI }}:${{ github.sha }} ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME_WEBAPP }}:${{ github.sha }}
                 manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
                 namespace: test
