--- a/manifests/webapi-service.yaml
+++ b/manifests/webapi-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: autodeployment
+  name: webapi-svc
   namespace: test
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: autodeployment
+    app: webapi
   ports:
     - protocol: TCP
       port: 5000
