--- a/manifests/webapi-deployment.yaml
+++ b/manifests/webapi-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: webapi-deploy
   labels:
     app: webapi
-  namespace: test
+  namespace: perf
 spec:
   replicas: 1
   selector:
