--- a/manifests/webapi-service.yaml
+++ b/manifests/webapi-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapi-svc
-  namespace: test
+  namespace: perf
 spec:
   type: ClusterIP
   selector:
