--- a/manifests/webapp-deployment.yaml
+++ b/manifests/webapp-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: webapp-deploy
   labels:
     app: webapp
-  namespace: test
+  namespace: perf
 spec:
   replicas: 1
   selector:
