--- a/manifests/webapp-secret.yaml
+++ b/manifests/webapp-secret.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: webapp-secret
+  namespace: perf
 type: Opaque
 data:
   SQLSERVERNAME: aksperflabsqlsrv.database.windows.net
