--- a/manifests/webapp-service.yaml
+++ b/manifests/webapp-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-svc
-  namespace: test
+  namespace: perf
 spec:
   type: LoadBalancer
   selector:
