--- a/.github/workflows/autodeployment.yaml
+++ b/.github/workflows/autodeployment.yaml
@@ -68,4 +68,4 @@ jobs:
                 action: deploy
                 images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME_WEBAPI }}:${{ github.sha }} ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME_WEBAPP }}:${{ github.sha }}
                 manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
-                namespace: DEPLOYMENT_NAMESPACE
+                namespace: ${{ env.DEPLOYMENT_NAMESPACE }}
