--- a/manifests/webapp-secret.yaml
+++ b/manifests/webapp-secret.yaml
@@ -2,12 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: webapp-secret
-  namespace: perf
+  name: webapp-secret  
 type: Opaque
 data:
-  SQLSERVERNAME: aksperflabsqlsrv.database.windows.net
-  SQLSERVERDBNAME: aksperflabdb
-  SQLUSERNAME: sql-admin
-  SQLPASSWORD: Password!123
-  WEBAPIURL: http://webapi-svc:5000/weatherforecast
+  SQLSERVERNAME: YWtzcGVyZmxhYnNxbHNydi5kYXRhYmFzZS53aW5kb3dzLm5ldA==
+  SQLSERVERDBNAME: YWtzcGVyZmxhYmRi
+  SQLUSERNAME: c3FsLWFkbWlu
+  SQLPASSWORD: UGFzc3dvcmQhMTIz
+  WEBAPIURL: aHR0cDovL3dlYmFwaS1zdmM6NTAwMC93ZWF0aGVyZm9yZWNhc3Q=
