--- a/manifests/webapp-secret.yaml
+++ b/manifests/webapp-secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: webapp-secret  
+  namespace: perf
 type: Opaque
 data:
   SQLSERVERNAME: YWtzcGVyZmxhYnNxbHNydi5kYXRhYmFzZS53aW5kb3dzLm5ldA==
