added some missings and debugging info

--- a/manifests/webapp-secret.yaml
+++ b/manifests/webapp-secret.yaml
@@ -8,6 +8,6 @@ type: Opaque
 data:
   SQLSERVERNAME: YWtzcGVyZmxhYnNxbHNydi5kYXRhYmFzZS53aW5kb3dzLm5ldA==
   SQLSERVERDBNAME: YWtzcGVyZmxhYmRi
-  SQLUSERNAME: c3FsLWFkbWlu
+  SQLUSERNAME: YXBwLXVzZXI=
   SQLPASSWORD: UGFzc3dvcmQhMTIz
   WEBAPIURL: aHR0cDovL3dlYmFwaS1zdmM6NTAwMC93ZWF0aGVyZm9yZWNhc3Q=
