--- a/manifests/webapi-deployment.yaml
+++ b/manifests/webapi-deployment.yaml
@@ -19,4 +19,10 @@ spec:
         - name: webapi
           image: aksperflabacr.azurecr.io/aksperflab-webapi:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8080          
+          # env:
+          #   - name: CLOUDROLENAME
+          #     valueFrom:
+          #       secretKeyRef:
+          #         name: webapp-secret
+          #         key: CLOUDROLENAME
